--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/",
-      "proxyUrl": "http://localhost:8000/"
+      "proxyUrl": "http://192.168.1.7:8000/"
     }
   ]
 }
