--- a/client/package.json
+++ b/client/package.json
@@ -31,13 +31,13 @@
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
     "angular2-jwt": "^0.2.3",
-    "cordova-android": "^7.1.1",
+    "cordova-android": "7.1.1",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-googleplus": "5.3.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.4.1",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-photo-library": "2.1.1",
     "cordova-plugin-speechrecognition": "1.2.0",
